Fix image size on mobile (?)

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -603,5 +603,10 @@ div.introduction{
 }
 
 .chapter-text img {
-  width: 100vw;
+  /* max-width: 600px;
+  max-height: 400px;
+  width: 100%;
+  height: auto; */
+  max-width: 100%;
+  max-height: 100%;
 }
